--- a/blog/_posts/2020-05-06-youpai.md
+++ b/blog/_posts/2020-05-06-youpai.md
@@ -49,9 +49,17 @@ image: /assets/img/blog/upyun.jpg
 </style>
 ```
 
-这里呢 为了实现一个拖拽上传功能 需要添加两个函数
+这里呢 为了实现一个拖拽上传功能 需要添加监听功能
 
 ```js
+mounted: function() {
+    // 注册拖拽容器
+    let upload = document.querySelector('.upload');
+    // 生命监听事件
+    upload.addEventListener('dragenter', this.onDrag, false); // 按住
+    upload.addEventListener('dragover', this.onDrag, false);  //拖拽悬停
+    upload.addEventListener('drop', this.onDrop, false);  // 松开
+},
 onDrag (e) {
     e.stopPropagation();
     e.preventDefault();
