--- a/songlist/_posts/2020-01-28-song2-list.md
+++ b/songlist/_posts/2020-01-28-song2-list.md
@@ -18,9 +18,9 @@ css.attr({
     href: "https://cdn.bootcss.com/aplayer/1.10.1/APlayer.min.css"
 });
 document.write('<div id="aplayer"></div>');
-console.log('准备请求');
+alert('准备请求');
 $.getScript('https://cdn.bootcss.com/aplayer/1.10.1/APlayer.min.js', function () {
-    console.log('请求歌单json');
+
     $.ajax({
         type: "GET",
         // url: 'https://api88.net/api/qqmusic/?key=e379deed68a23c2ed83c6e3427a12a49&id=4139958112&type=songlist&cache=',
