--- a/blog/_posts/2020-04-20-git-code.md
+++ b/blog/_posts/2020-04-20-git-code.md
@@ -52,7 +52,7 @@ git push origin master  提交云端主分支
 
 ```dos
 git log 查看提交日志
-git reset --hard 提交的id
+git reset --hard 提交的id 同时重置暂存区和工作区，与指定commit一致
 
 git push origin HEAD --force 强迫云端代码与本地保持一致
 ```
