--- a/_posts/2020-05-12-morefile.md
+++ b/_posts/2020-05-12-morefile.md
@@ -27,6 +27,7 @@ related_posts:
 首先监测input标签
 
 ```js
+// file: 'upload.vue'
 add_infoimgs(e){
     // 获取文件
     let file = e.target.files[0];
@@ -40,6 +41,7 @@ add_infoimgs(e){
 ## 批量封装formdata
 
 ```js
+// file: 'upload.vue'
 //循环列表
 for(let i=0;i<this.info_imgs.length;i++){
     // 获取每次循环文件
@@ -58,6 +60,7 @@ for(let i=0;i<this.info_imgs.length;i++){
 发送请求
 
 ```js
+// file: 'upload.vue'
 let config = { headers: { "Content-Type": "multipart/form-data" } };
 this.axios.post("http://127.0.0.1:8000/myapp/insertgoods/",formdata,config).then(res=>{
     console.log(res.data)
@@ -71,6 +74,8 @@ django 后台思路  根据图片名list 来判断有没有文件
 如果有 循环list次数来取文件
 
 ```python
+# file: 'views.py'
+
 # 获取详情图片的列表
 # POST.getlist 可以将参数转换为list
 name = request.POST.get('name',None)
