--- a/_posts/2020-05-29-send-sms.md
+++ b/_posts/2020-05-29-send-sms.md
@@ -71,6 +71,13 @@ pip3 install qcloudsms_py
   发送信息的函数
 
 ```python
+# file: 'test.py'
+
+from qcloudsms_py import SmsSingleSender
+from qcloudsms_py.httpclient import HTTPError
+
+import ssl
+
 # 短信应用SDK AppID
 appid = 你的appid  # SDK AppID是1400开头
 
@@ -86,10 +93,6 @@ template_id = 在模板列表里获取
 # 签名
 sms_sign = "xxx的博客"
 
-from qcloudsms_py import SmsSingleSender
-from qcloudsms_py.httpclient import HTTPError
-
-import ssl
 ssl._create_default_https_context = ssl._create_unverified_context
 
 ssender = SmsSingleSender(appid, appkey)
