--- a/_posts/2020-05-22-add-cart.md
+++ b/_posts/2020-05-22-add-cart.md
@@ -33,6 +33,8 @@ image: /assets/img/blog/cart.jpg
 如果没有就手动添加一条数据 数量默认为1
 
 ```js
+// file: 'cart.vue'
+
 // 添加购物车
 add_to_cart(){
     // 默认购物车内没有改商品
@@ -70,6 +72,8 @@ add_to_cart(){
 初始化一下购物车
 
 ```js
+// file: 'cart.vue'
+
 //初始化购物车
 init_cart(){
     var cartdata= localStorage.getItem('cart')
@@ -88,6 +92,8 @@ init_cart(){
 普通的购物车都有一个总价格 顺便计算下总价格
 
 ```js
+// file: 'cart.vue'
+
 //计算总价格
 all_price(){
     var count = 0
